# clarify

./: .bazelrc  .gitignore  .restyled.yaml  .travis.yml  BUILD  CONTRIBUTING.md  Dockerfile  INCLUSIVITY.md  MANIFEST.in  OWNERS  README.md  WORKSPACE  build.yaml  default_config.json  dev-requirements.txt  issue_labels.md  pylintrc  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-docs.yaml  deploy-ftw-loader-fns.yaml  deploy-models-kfserving.yaml  deploy-study.yaml
clarify/: BUILD
clarify/batch/: BUILD  README.md  fyre.py  fyre_test.py  git_utils.py  git_utils_test.py  job.py  job_test.py  jobs.py  jobs_test.py
clarify/research/: BUILD  train.py
clarify/tune/: BUILD
clarify/utils/: BUILD  cbt_utils.py  cbt_utils_test.py  cfg_utils.py  cmd_utils.py  fs_utils_test.py
client/: README.md  find.py  package-lock.json  package.json
config/image_fec/: trax_dev.gin
docs/: acknowledgments.md  extract-videos.md  fec-datagen.md  fec-training.md  fec.md  research-plan.md
docs/demos/: demo.ipynb  run-justresnet-attr.csv  run-justresnet-land.csv
exp/: README.md  myfun.py  untitled.txt
exp/golang-experiments/cpython-parallel/: BUILD.bazel  go-threading-test.go  go-threading-test.h  go-threading-test.py
exp/mlab/: cbdemo.py  hello.py  raffi-sample.py
exp/sampler/: BUILD.bazel
experiments/public/: bower.json  index.html  package-lock.json  playground-app.html  playground-splash.html
ftw-ui/: firebase.json
ftw/ftw_meta/: deploy.py
go/: README.md  feature.proto
hc/: BUILD.bazel  OWNERS  README.md  docs.ipynb
hc/cmd/hc/: BUILD.bazel  main.go  main.py
hc/pkg/sampler/: BUILD.bazel  sample.go  samplerConfig.h
pcml/: BUILD  __init__.py  demo.py  test_config.py
pcml/datasets/: BUILD  __init__.py  affectnet.py  affectnet_test.py  base.py  celeba.py  celeba_test.py  deap.py  deap_test.py  disfa.py  disfa_test.py  example_utils.py  example_utils_test.py  fec.py  fec_test.py  image_aug.py  mahnob_hci.py  mahnob_hci_test.py  mmimp.py  mmimp_test.py  test_utils.py  test_utils_test.py  utils.py  utils_test.py  vggface2.py  vggface2_test.py  vox_celeb_cbt.py  vox_celeb_cbt_test.py
pcml/demos/: audio_cues.py  similarity_search.py
pcml/launcher/: BUILD  experiment.py  experiment_batch_test.py  experiment_test.py  kube.py  kube_test.py  study.py  study_test.py  util.py  util_test.py
pcml/models/: BUILD  dev.py  image_fec.py  image_fec_test.py  modality_correspondence.py  modality_correspondence_test.py  modality_correspondence_utils.py  modality_correspondence_utils_test.py  percep_similarity_emb.py  percep_similarity_emb_test.py
pcml/operations/: BUILD  cbt_datagen.py  cbt_datagen_test.py  cbt_datagen_v2.py  download_fec.py  download_fec_test.py  embed_images.py  embed_images_test.py  eval.py  eval_test.py  export.py  extract.py  extract_test.py  glob2manifest.py  glob2manifest_test.py  t2t_datagen.py  t2t_datagen_test.py  t2t_datagen_v2.py  t2t_datagen_v2_test.py  tfrecord2bigtable.py  tfrecord2bigtable_test.py
pcml/utils/: BUILD  audio_utils.py  audio_utils_test.py  augmentation_utils.py  augmentation_utils_test.py  bazel_utils.py  bazel_utils_test.py  cbt_utils.py  cbt_utils_test.py  cfg_utils.py  cfg_utils_test.py  cmd_utils.py  cmd_utils_test.py  dev_utils.py  dev_utils_test.py  fs_utils.py  fs_utils_test.py  ftl_utils.py  ftl_utils_test.py  gcb_utils.py  gcb_utils_test.py  (+6 more)
sampler/cmd/main/: BUILD.bazel  main.go
tools/: clear_conda_env.py  get-clarify
(+189 files in other folders)
