load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

#load("@io_bazel_rules_go//go:def.bzl", "go_library")
#load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

#proto_library(
#    name = "example_proto",
#    srcs = ["feature.proto"],
#    visibility = ["//visibility:public"],
#)

#go_proto_library(
#    name = "example_go_proto",
#    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/example",
#    proto = ":example_proto",
#    visibility = ["//visibility:public"],
#)

#go_library(
#    name = "go_default_library",
#    embed = [":example_go_proto"],
#    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/example",
#    visibility = ["//visibility:public"],
#)

proto_library(
    name = "example_proto",
    srcs = ["feature.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "example_go_proto",
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/example",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":example_go_proto"],
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/example",
    visibility = ["//visibility:public"],
)
