load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "go-threading-test.go",
        "go-threading-test.h",
    ],
    cgo = True,
    importpath = "github.com/projectclarify/pcml/sampler/exp/golang-experiments/cpython-parallel",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cpython-parallel",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
