load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/projectclarify/clarify/hc/cmd/hc",
    visibility = ["//visibility:private"],
    deps = ["@com_github_projectclarify_clarify//hc/pkg/sampler/sample:go_default_library"],
)

go_binary(
    name = "hc",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
